<resources>
    <string name="pay_mobile">Payment via Mobile</string>
    <string name="pay_credit">Payment via Google Play</string>
    <string name="subs">mgGolf Subscription</string>
    <string name="subs_text">Please select the payment type that you prefer</string>
    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="done">Done</string>
    <string name="get_number">Get Number</string>
    <string name="number_tourn">Tournaments</string>
    <string name="number_rounds">Number of Rounds</string>
    <string name="rounds">Rounds</string>
    <string name="avg_per_round">Strokes Per Round</string>
    <string name="last_hole">Last Recorded Hole</string>
    <string name="last_hole_short">Last Hole</string>
    <string name="current_round">Current Round</string>
    <string name="view_players">View Player List</string>
    <string name="go">Go</string>
    <string name="error_email">Problem sending email</string>
    <string name="choose_photo">Select Profile Photo</string>
    <string name="error_date">Enter end date equal or later than start date</string>
    <string name="error_database">Database error. Contact The CourseMaker support on the web site</string>
    <string name="error_local_databse">Local Database error. Contact The CourseMaker support on the web site</string>
    <string name="error_network_unavailable">Network unavailable. Check settings and signal strength</string>
    <string name="error_server_unavailable">Server is unavailable due to maintenance. Please try later.</string>
    <string name="error_encoding">Error encoding request. Contact The CourseMaker support</string>
    <string name="error_server_comms">Problem communicating with the server. Please try again or contact mgGolf support</string>
    <string name="error_duplicate">Attempting to put duplicate data in database, ignored</string>
    <string name="welcome_aboard">Welcome Aboard! Thanks for signing up!</string>
    <string name="app_name">Monitor</string>
    <string name="pages">Page</string>
    <string name="firstname">First Name</string>
    <string name="golfgroup_number">Golf Group Number</string>
    <string name="tourney_name">Tournament Name</string>
    <string name="lastname">Surname</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="cellphone">Cellphone</string>
    <string name="search_map">Use Map for Club search</string>
    <string name="invited">You are invited to download this app\:</string>
    <string name="click_link">Click or tap the link below to navigate to Google Play</string>
    <string name="enjoy">Enjoy the game!</string>
    <string name="select_players_imp">Please select Players for import</string>
    <string name="subject">Invitation to mgGolf</string>
    <string name="off">Normal</string>
    <string name="message_from">Message from</string>
    <string name="on">Satellite</string>
    <string name="select_holes">Please select number of holes</string>
    <string name="select_email">Please select eMail address</string>
    <string name="pin_note">Please note your pin below. The pin is needed when you login the first time</string>
    <string name="player_removed">Player removed from Tournament</string>
    <string name="tourn_registered">Tournament has been registered</string>
    <string name="select_club">Select Golf Club</string>
    <string name="select_course">Select Golf Course</string>
    <string name="add_new_club">Add Golf Club</string>
    <string name="enter_clubname">Enter Golf Club name</string>
    <string name="add_new_course">Add Golf Course to Club</string>
    <string name="clubs">Golf Clubs</string>
    <string name="register_all_players">Register All Players</string>
    <string name="all_players">All?</string>
    <string name="clubs_loading">Golf Clubs Loading...</string>
    <string name="tournaments">Tournaments</string>
    <string name="selected">Selected</string>
    <string name="players">Players</string>
    <string name="parents">Parents</string>
    <string name="scorers">Scorers</string>
    <string name="admins">Administrators</string>
    <string name="live">Live!</string>
    <string name="complete">Complete</string>
    <string name="date">Date</string>
    <string name="teeTime">Tee Time</string>
    <string name="first_hole">1st Hole</string>
    <string name="tenth_hole">10th Hole</string>
    <string name="club">Golf Club</string>
    <string name="messaging">Messaging</string>
    <string name="tournament">Tournament</string>
    <string name="player">Player</string>
    <string name="parent">Parent</string>
    <string name="scorer">Scorer</string>
    <string name="score">Score</string>
    <string name="enter_scores">Enter Player Scores</string>
    <string name="admin">Administrator</string>
    <string name="select_imp_playr">Select Player for import</string>
    <string name="select_msg_playr">Select Player for message</string>
    <string name="import_files">Files for Import</string>
    <string name="import_players">Import Players</string>
    <string name="import_all_players">Select All Players</string>
    <string name="tourn_type">Tournament Type</string>
    <string name="strokeplay_indiv">Individual StrokePlay</string>
    <string name="stableford_indiv">Individual Stableford</string>
    <string name="agegroup">Age Group</string>
    <string name="find_clubs">Find Clubs</string>
    <string name="find_club">Find Tournament Club</string>
    <string name="check_club_sc">Check Club Scorecard</string>
    <string name="select_str">Select</string>
    <string name="send_inv">Send Invitation</string>
    <string name="scorer_app">Scorer App</string>
    <string name="player_app">Player App</string>
    <string name="leaderbd_app">Leaderboard App</string>
    <string name="admin_app">Administration App</string>
    <string name="invite_title">Invite Golf Group members to download apps</string>
    <string name="mg_apps">mgGolf Apps</string>
    <string name="invite_dialog">Are you sure you want to invite a download of this app? \nThe user will be an Administrator and may add and change data in your group</string>
    <string name="invite_confirm">Do you want to invite someone to download mgGolf Leaderboard App?</string>
    <string name="save_scores">Save Score</string>
    <string name="save_scorecard">Save Club Scorecard</string>
    <string name="select_round">Please select round</string>
    <string name="confirm_close">Confirm Close</string>
    <string name="close_question">Do you really want to close this Tournament?</string>
    <string name="setup_question">Do you want to set up a Tournament at this Club?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="par">Par</string>
    <string name="club_directions">Do you want directions from your location to this Club?</string>
    <string name="sort">Sort TimeSheet</string>
    <string name="sort_players">Sort Players</string>
    <string name="round1">Round 1</string>
    <string name="round2">Round 2</string>
    <string name="round3">Round 3</string>
    <string name="round4">Round 4</string>
    <string name="round5">Round 5</string>
    <string name="round6">Round 6</string>
    <string name="total_score">Total Score</string>
    <string name="total_points">Total Points</string>
    <string name="relation">Relation to Par</string>
    <string name="teetime">Tee Time</string>
    <string name="hole">Hole</string>
    <string name="points">Points</string>
    <string name="hole1">Hole 01</string>
    <string name="hole2">Hole 02</string>
    <string name="hole3">Hole 03</string>
    <string name="hole4">Hole 04</string>
    <string name="hole5">Hole 05</string>
    <string name="hole6">Hole 06</string>
    <string name="hole7">Hole 07</string>
    <string name="hole8">Hole 08</string>
    <string name="hole9">Hole 09</string>
    <string name="hole10">Hole 10</string>
    <string name="hole11">Hole 11</string>
    <string name="hole12">Hole 12</string>
    <string name="hole13">Hole 13</string>
    <string name="hole14">Hole 14</string>
    <string name="hole15">Hole 15</string>
    <string name="hole16">Hole 16</string>
    <string name="hole17">Hole 17</string>
    <string name="hole18">Hole 18</string>
    <string name="text_msg">Text Message</string>
    <string name="email">Email</string>
    <string name="groups">Your Golf Groups</string>
    <string name="group_number">Group Number</string>
    <string name="select_group">Select Group for this session</string>
    <string name="add_new">Add New</string>
    <string name="save">Save Data</string>
    <string name="zero">00</string>
    <string name="tee">Tee</string>
    <string name="add_new_tourn">Add Tournament</string>
    <string name="use_age_groups">Use Age Groups?</string>
    <string name="select_tourn_type">Please select Tournament format</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="select_acct">Please select account</string>
    <string name="enter_group_id">Enter Golf Group Number</string>
    <string name="lb_viewer">Leaderboard Viewer</string>
    <string name="socket_closed">Communications socket closed. Please refresh</string>
    <string name="close_tourn">Close Tournament?</string>
    <string name="tourn_closed">Tournament is closed for edits</string>
    <string name="round_score">Round Score</string>
    <string name="register_this_player">Register this Player</string>
    <string name="select_player">Please select Player</string>
    <string name="select_province">State/Province</string>
    <string name="player_already_in_tourn">This Player is already entered in the Tournament</string>
    <string name="txt">Text for Design Purpose</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="project_sites">Project Sites</string>
    <string name="withdraw">Withdraw Player</string>
    <string name="take_pic">Take Picture</string>
    <string name="help_me">Help Me</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="tourn_history">Tournament History</string>
    <string name="send_mail">Send eMail</string>
    <string name="send_text">Send Text Message</string>
    <string name="change">Change Information</string>
    <string name="winner_countout">Winner by CountOut</string>
    <string name="winner_playoff">Winner by PlayOff</string>
    <string name="view_scorecard">Look at ScoreCard(s)</string>
    <string name="date_birth">Date of Birth</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="tourn_gallery">Gallery</string>
    <string name="group_name">Golf Group Name</string>
    <string name="group_reg">Golf Group Registration</string>
</resources>