<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_add"
            android:icon="@drawable/ic_action_new"
            android:showAsAction="ifRoom"
            android:title="@string/add_new_club"/>
    <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_action_map"
            android:showAsAction="ifRoom"
            android:title="@string/map"/>
    <item
            android:id="@+id/menu_list"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_view_as_list"
            android:title="@string/list"/>
    <item
            android:id="@+id/menu_back"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_back"
            android:title="@string/back"/>
    <item
            android:id="@+id/menu_help"
            android:showAsAction="never"
            android:enabled="true"
            android:title="@string/help_me"/>
</menu>