<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
   
    <item
            android:id="@+id/menu_take_picture_admin"
            android:icon="@drawable/camera32"
            android:title="@string/take_pic"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_invite_admin"
            android:icon="@drawable/ic_action_edit"
            android:title="@string/subject"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_send_mail_admin"
            android:icon="@drawable/flag32"
            android:title="@string/send_mail"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_send_text_admin"
            android:icon="@drawable/flag32"
            android:title="@string/send_text"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_change_admin"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/change"
            android:showAsAction="ifRoom"/>
</menu>