<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_winner_countout"
            android:icon="@drawable/flag32"
            android:title="@string/winner_countout"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_winner_playoff"
            android:icon="@drawable/flag32"
            android:title="@string/winner_playoff"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_scorecard"
            android:icon="@drawable/cal1_32"
            android:title="@string/view_scorecard"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_withdraw"
            android:icon="@drawable/cal1_32"
            android:title="@string/withdraw"
            android:showAsAction="ifRoom"/>

</menu>