<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:padding="2dp"
          android:layout_height="wrap_content">

    <TextView
            android:id="@+id/TA_txtAge"
            android:text="@string/agegroup"
            android:layout_width="wrap_content"
            android:background="@drawable/xthin_grey_box"
            android:textColor="@color/white"
            style="@style/ThinGreyBox"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/TA_txtHole"
            android:text="@string/hole"
            style="@style/ThinGreyBox"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/TA_txtTime"
            android:text="@string/teetime"
            style="@style/ThinGreyBox"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/TA_txtPlayer"
            android:text="@string/player"
            android:layout_marginRight="5dp"
            style="@style/ThinGreyBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</TableRow>