<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:background="@color/grey"
                android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/IMP_topLayout"
            android:background="@color/beige_pale"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/IMP_title"
                android:text="@string/import_files"
                android:layout_width="wrap_content"
                style="@style/Title2TextStyleBlack"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/IMP_image"
                android:src="@drawable/import_pic"
                android:layout_below="@id/IMP_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/IMP_fileSpinner"
                android:layout_below="@id/IMP_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_below="@id/IMP_fileSpinner"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/IMP_allCheck"
                    android:text="@string/import_all_players"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/IMP_btnImport"
                    android:text="@string/import_players"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/IMP_countLayout"
            android:layout_below="@id/IMP_topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/IMP_countLabel"
                style="@style/Title2TextStyleGrey"
                android:textColor="@color/grey2"
                android:layout_centerVertical="true"
                android:text="@string/players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/IMP_count"
                style="@style/Title2TextStyleBlue"
                android:text="@string/zero"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/IMP_countLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            </RelativeLayout>


    <ListView
            android:id="@+id/IMP_list"
            android:layout_below="@id/IMP_countLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</RelativeLayout>